# Relation-Graph

./: README.md
Docs/: Documentation.md  Testing Guide.md  User Guide.md  relation-graph.md  user guide.md
docs/: ACL Introduction.md  Demo of scaffold  Demo of scaffold.md  Documentation.md  OGM Introdction.md  Testing Guide.md
scaffold/: README.md  package-lock.json  package.json
scaffold/src/: App.css  App.tsx  global.d.ts
scaffold/src/components/button/: index.css  index.tsx
scaffold/src/components/loading/: index.css  index.tsx
scaffold/src/graph/: index.ts  parser.ts  sparqlQuery.ts
src/: Cargo.toml  README.md
src/data/: relation_acl.ttl  relation_samples.ttl
src/node/: Cargo.toml
src/node/src/: chain_spec.rs  rpc.rs
src/pallets/graphdb/: Cargo.toml
src/pallets/graphdb/rpc/: Cargo.toml
src/pallets/graphdb/rpc/src/: lib.rs
src/pallets/graphdb/runtime-api/: Cargo.toml
src/pallets/graphdb/runtime-api/src/: lib.rs
src/pallets/graphdb/src/: error.rs  lib.rs
src/pallets/graphdb/src/ic/: mod.rs
src/pallets/graphdb/src/io/: format.rs  read.rs  write.rs
src/pallets/graphdb/src/model/: blank_node.rs  literal.rs  named_node.rs  parser.rs
src/pallets/graphdb/src/model/xsd/: date_time.rs
src/pallets/graphdb/src/ogm/: mod.rs
src/pallets/graphdb/src/sparql/: algebra.rs  error.rs  mod.rs  model.rs  service.rs
src/pallets/graphdb/src/sparql/results/: mod.rs
src/pallets/graphdb/src/store/: codec.rs  mod.rs  model.rs  sophia.rs
src/runtime/: Cargo.toml
src/runtime/src/: lib.rs  wasm_binary.rs
src/runtime/wasm/: node_template_runtime.compact.compressed.wasm  node_template_runtime.wasm
src/scripts/benchmarks/: query_friends.lua  query_friends.sh
