[package]
name = "subgraph-rpc"
version = "1.0.0"
authors = ['relationlabs  <https://relationlabs.ai>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client =  "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }
# local packages

subgraph-runtime-api = { version = "1.0.0", path = "../runtime-api", default-features = false }

# Substrate packages
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-rpc = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-runtime = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }



[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "subgraph-runtime-api/std"
]
