[package]
name = "subgraph-runtime-api"
version = "1.0.0"
authors = ['relationlabs  <https://relationlabs.ai>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
jsonrpc-core = "18.0.0"
[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"sp-api/std",
]
